More things in place